feature: ESP32 support

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,3 +35,23 @@ build_flags = -DRGB_COLOR_TYPE=RgbColor -DRGB_COLOR_FEATURE=NeoGrbFeature
 platform = espressif8266
 board = esp12e
 build_flags = -DRGB_COLOR_TYPE=RgbwColor -DRGB_COLOR_FEATURE=NeoGrbwFeature
+
+[env:esp32]
+platform = espressif32
+board = esp32dev
+build_flags = -DRGB_COLOR_TYPE=RgbColor -DRGB_COLOR_FEATURE=NeoGrbFeature
+
+[env:esp32-rgbw]
+platform = espressif32
+board = esp32dev
+build_flags = -DRGB_COLOR_TYPE=RgbwColor -DRGB_COLOR_FEATURE=NeoGrbwFeature
+
+[env:firebeetle32]
+platform = espressif32
+board = firebeetle32
+build_flags = -DRGB_COLOR_TYPE=RgbwColor -DRGB_COLOR_FEATURE=NeoGrbwFeature
+
+[env:firebeetle32-rgbw]
+platform = espressif32
+board = firebeetle32
+build_flags = -DRGB_COLOR_TYPE=RgbwColor -DRGB_COLOR_FEATURE=NeoGrbwFeature
